tests/fail/ForStatements.java
package fail;
import java.lang.System;

public class ForStatements {
	public static void main(String[] args) {
		int acc = 0;
		for (int i = 10; i*2; i++) {
			acc = acc + i;
		}
		System.out.println(acc != 0);
		
		int sum = 0;
		int[] array = {0,1,2,3,4};
		for (int i ; array) {
			acc = acc + i;
		}
	}



}
